<resources>
    <string name="app_name">LocationTracker</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="action_log_in">Log in</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settingsd">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="e_mail">E_Mail</string>
    <string name="change_mail">Change Mail</string>
    <string name="Delete">Delete</string>
    <string name="prompt_device">Device name</string>
    <string name="add_device_button">Add device</string>
    <string name="change_route_name">Change Name</string>
    <string name="preference_file_key">com.miketa.locationtracker.PREFERENCE_FILE_KEY</string>
    <string name="token_value">token</string>
    <string name="distance">Distance</string>
    <string name="duration">Duration</string>
    <string name="max_speed">Max speed</string>
    <string name="min_speed">Min Speed</string>
    <string name="avg_speed">Avg Speed</string>
    <string name="minAltitude">Min Altitude</string>
    <string name="max_altitude">Max Altitude</string>
    <string name="avgAltitude">Avg Altitude</string>
    <string name="none">none</string>
    <string name="Delete_route">Delete</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="new_route_name">New route name</string>
</resources>
